--- a/src/jira.net.client.library/jira.net.client.library.csproj
+++ b/src/jira.net.client.library/jira.net.client.library.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="RestSharp" version="108.0.2" />
+  </ItemGroup>
+
 </Project>
