--- a/src/jira.net.client.library/jira.net.client.library.csproj
+++ b/src/jira.net.client.library/jira.net.client.library.csproj
@@ -4,7 +4,17 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <Title>Jira .NET client</Title>
+    <Authors>Oliver Bullock</Authors>
+    <Description>A simple approach for .NET developers to interface with Jira.</Description>
+    <Copyright>Oliver Bullock</Copyright>
+    <PackageProjectUrl>https://kinetic-coder.github.io/jira.net.client/</PackageProjectUrl>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="https:\github.com\kinetic-coder\jira.net.client\blob\master\README.md" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="RestSharp" version="108.0.2" />
